# justdoit

./: .gitignore  LICENSE.md  README.md  pyproject.toml
justdoit/: __init__.py
