[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "justdoit"
version = "1.0.0"
authors = [
  { name="Chris Sato", email="chrismsato@gmail.com" },
]
description = "Remember these words."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["just do it", "motivation", "import this"]

[project.urls]
Repository = "https://github.com/cmsato09/justdoit"
Issues = "https://github.com/cmsato09/justdoit/issues"